--- a/cloudfoundry-maven-plugin/pom.xml
+++ b/cloudfoundry-maven-plugin/pom.xml
@@ -4,8 +4,18 @@
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cf-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>1.0.0.M1-SNAPSHOT</version>
+	<version>1.0.0.BUILD-SNAPSHOT</version>
 	<name>Cloud Foundry Maven Plugin</name>
+
+    <description><![CDATA[The Cloud Foundry Maven Plugin makes it easy to deploy 
+       Maven-based applications to Cloud Foundry instances.
+    ]]></description>
+
+    <properties>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java-version>1.5</java-version>
+        <slf4j-version>1.5.6</slf4j-version>
+    </properties>
 
     <licenses>
         <license>
@@ -15,37 +25,97 @@
         </license>
     </licenses>
     
-    <properties>
-        <java-version>1.5</java-version>
-        <slf4j.version>1.5.6</slf4j.version>
-    </properties>
+    <developers>
+        <developer>
+            <id>ghillert</id>
+            <name>Gunnar Hillert</name>
+            <email>ghillert at vmware.com</email>
+        </developer>
+    </developers>
+
+    <profiles>
+        <profile>
+            <id>staging</id>
+            <distributionManagement>
+                <repository>
+                    <id>spring-milestone-staging</id>
+                    <url>file:///${java.io.tmpdir}/${project.artifactId}/milestone</url>
+                </repository>
+                <snapshotRepository>
+                    <id>spring-snapshot-staging</id>
+                    <url>file:///${java.io.tmpdir}/${project.artifactId}/snapshot</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+        <profile>
+            <id>milestone</id>
+            <distributionManagement>
+              <repository>
+                <id>spring-milestone</id>
+                <name>Spring Milestone Repository</name>
+                <url>s3://maven.springframework.org/milestone</url>
+              </repository>
+            </distributionManagement>
+        </profile>     
+    </profiles>
+
+    <repositories>
+        <repository>
+            <id>repository.springframework.maven.release</id>
+            <name>Spring Framework Maven Release Repository</name>
+            <url>http://maven.springframework.org/release</url>
+        </repository>
+        <repository>
+            <id>repository.springframework.maven.milestone</id>
+            <name>Spring Framework Maven Milestone Repository</name>
+            <url>http://maven.springframework.org/milestone</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>spring-release</id>
+            <name>Spring Release Repository</name>
+            <url>s3://maven.springframework.org/release</url>
+        </repository>
+        <snapshotRepository>
+            <id>spring-snapshot</id>
+            <name>Spring Snapshot Repository</name>
+            <url>s3://maven.springframework.org/snapshot</url>
+        </snapshotRepository>
+    </distributionManagement>
     
     <build>
+        <extensions>
+            <extension>
+                <groupId>org.springframework.build.aws</groupId>
+                <artifactId>org.springframework.build.aws.maven</artifactId>
+                <version>3.0.0.RELEASE</version>
+            </extension>
+        </extensions>
         <plugins>
-           <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>${java-version}</source>
-                    <target>${java-version}</target>
-                </configuration>
-            </plugin>
+                     <source>${java-version}</source>
+                     <target>${java-version}</target>
+                     <compilerArgument>-Xlint:all</compilerArgument>
+                     <showWarnings>true</showWarnings>
+                     <showDeprecation>true</showDeprecation>
+                 </configuration>
+             </plugin>
+			 <plugin>
+			     <groupId>org.apache.maven.plugins</groupId>
+			     <artifactId>maven-release-plugin</artifactId>
+			     <version>2.2.1</version>
+			     <configuration>
+			         <pushChanges>false</pushChanges>
+			     </configuration>
+			 </plugin>
         </plugins>
     </build>
-
-    <distributionManagement>
-        <repository>
-            <id>spring-milestone</id>
-            <name>Spring Framework Milestone Repository</name>
-            <url>http://maven.springframework.org/milestone</url>
-        </repository>
-        <snapshotRepository>
-            <id>spring-snapshot</id>
-            <name>Spring Framework Snapshot Repository</name>
-            <url>http://maven.springframework.org/snapshot</url>
-        </snapshotRepository>
-    </distributionManagement>
 
 	<dependencies>
 		<dependency>
@@ -56,7 +126,7 @@
 		<dependency>
 			<groupId>org.cloudfoundry</groupId>
 			<artifactId>cloudfoundry-client-lib</artifactId>
-			<version>0.7.0.BUILD-SNAPSHOT</version>
+			<version>0.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.wagon</groupId>
@@ -113,19 +183,19 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
+            <version>${slf4j-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
-            <version>${slf4j.version}</version>
+            <version>${slf4j-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-            <version>${slf4j.version}</version>
+            <version>${slf4j-version}</version>
             <scope>test</scope>
         </dependency>
 	</dependencies>
