Update scm connection in pom.xml
Change-Id: I512b89724595269caa430cfdb9bbf5a3f0bc7487

--- a/cloudfoundry-maven-plugin/pom.xml
+++ b/cloudfoundry-maven-plugin/pom.xml
@@ -33,6 +33,12 @@
         </developer>
     </developers>
 
+    <scm>
+        <url>http://github.com/SpringSource/vcap-java-client</url>
+        <connection>scm:git:git@github.com/SpringSource/vcap-java-client</connection>
+        <developerConnection>scm:git:git@github.com/SpringSource/vcap-java-client</developerConnection>
+    </scm>
+
     <profiles>
         <profile>
             <id>staging</id>
