--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -66,7 +66,12 @@
 			<version>1.2.14</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.1</version>
+    </dependency>
+  </dependencies>
 
 	<build>
 		<extensions>
