--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.7.1.BUILD-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Client library to be used from STS and other Java tools</name>
-	
+
 	<licenses>
 		<license>
 			<name>Apache 2.0 License</name>
@@ -16,12 +16,12 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-	
+
 	<properties>
 		<maven.test.failure.ignore>true</maven.test.failure.ignore>
 		<spring.framework.version>3.0.5.RELEASE</spring.framework.version>
 	</properties>
-	
+
 	<profiles>
 		<profile>
 			<id>strict</id>
@@ -47,11 +47,23 @@
     		<artifactId>jackson-mapper-asl</artifactId>
     		<version>1.6.2</version>
 		</dependency>
-	  
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.8.5</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -119,5 +131,5 @@
 			<url>s3://maven.springframework.org/snapshot</url>
 		</snapshotRepository>
 	</distributionManagement>
-	
+
 </project>
