--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,28 @@
 	<name>vcap-java-client</name>
 	<version>0.1.0-BUILD-SNAPSHOT</version>
 
-	<modules>
-		<module>cloudfoundry-client-lib</module>
-		<module>cloudfoundry-maven-plugin</module>
-	</modules>
-
+	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<modules>
+				<module>cloudfoundry-client-lib</module>
+				<module>cloudfoundry-maven-plugin</module>
+				<module>caldecott-java-lib</module>
+			</modules>
+		</profile>
+		<profile>
+			<id>integration-test</id>
+			<modules>
+				<module>cloudfoundry-client-lib</module>
+				<module>cloudfoundry-maven-plugin</module>
+				<module>caldecott-java-lib</module>
+				<module>caldecott-java-test</module>
+			</modules>
+		</profile>
+	</profiles>
 
 	<build>
 		<plugins>
