Add Caldecott Java client
- Add library module for Caldecott Java client

- Add test module for integration tests for Caldecott Java client

- Add new profiles to CloudFoundry Java client to exclude integration test by default

- Add integration-test profile that executes all integration tests

Change-Id: I70437d5ab807fa307275f7007b2b7f858e80a10e

--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,28 @@
 	<name>vcap-java-client</name>
 	<version>0.1.0-BUILD-SNAPSHOT</version>
 
-	<modules>
-		<module>cloudfoundry-client-lib</module>
-		<module>cloudfoundry-maven-plugin</module>
-	</modules>
-
+	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<modules>
+				<module>cloudfoundry-client-lib</module>
+				<module>cloudfoundry-maven-plugin</module>
+				<module>cloudfoundry-caldecott-lib</module>
+			</modules>
+		</profile>
+		<profile>
+			<id>integration-test</id>
+			<modules>
+				<module>cloudfoundry-client-lib</module>
+				<module>cloudfoundry-maven-plugin</module>
+				<module>cloudfoundry-caldecott-lib</module>
+				<module>cloudfoundry-caldecott-test</module>
+			</modules>
+		</profile>
+	</profiles>
 
 	<build>
 		<plugins>
