Adding support for uploading the Caldecott server app to Caldecott Java Client
 - Adding support for uploading a simple "sinatra" app to Java CLient

 - JavaTunnel now deploys the Caldecott server app if necessary

 - Adding vmc as a submodule to genarate zip for caldecott_helper

Change-Id: I62f53a5bf60836d556d2d39471d680cd3de551e6

--- a/cloudfoundry-caldecott-lib/pom.xml
+++ b/cloudfoundry-caldecott-lib/pom.xml
@@ -18,7 +18,7 @@
 	</licenses>
 
 	<properties>
-		<spring.framework.version>3.0.5.RELEASE</spring.framework.version>
+		<spring.framework.version>3.0.7.RELEASE</spring.framework.version>
 		<cf.client.lib.version>0.7.2.BUILD-SNAPSHOT</cf.client.lib.version>
 		<junit.version>4.8.2</junit.version>
 		<mockito.version>1.8.5</mockito.version>
@@ -115,6 +115,23 @@
 						<exclude>**/Abstract*.java</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<phase>generate-resources</phase>
+						<configuration>
+							<target>
+							 <zip destfile="src/main/resources/caldecott_helper.zip" basedir="../vmc/caldecott_helper" update="true"/>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
