Prepare for release
 - cloudfoundry-client-lib 0.7.2 release

 - cloudfoundry-caldecott-lib 0.1.0 release

Change-Id: Idbd78c62fe7065b920f9ef989735db7225f8d80e

--- a/cloudfoundry-caldecott-lib/pom.xml
+++ b/cloudfoundry-caldecott-lib/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cloudfoundry-caldecott-lib</artifactId>
-	<version>0.1.0.BUILD-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>jar</packaging>
 	<name>Client library to be used for Caldecott access</name>
 
