--- a/cloudfoundry-caldecott-lib/pom.xml
+++ b/cloudfoundry-caldecott-lib/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cloudfoundry-caldecott-lib</artifactId>
-	<version>0.1.0.BUILD-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>jar</packaging>
 	<name>Client library to be used for Caldecott access</name>
 
@@ -19,7 +19,7 @@
 
 	<properties>
 		<spring.framework.version>3.0.7.RELEASE</spring.framework.version>
-		<cf.client.lib.version>0.7.2.BUILD-SNAPSHOT</cf.client.lib.version>
+		<cf.client.lib.version>0.7.2</cf.client.lib.version>
 		<junit.version>4.8.2</junit.version>
 		<mockito.version>1.8.5</mockito.version>
 	</properties>
