--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cloudfoundry-client-lib</artifactId>
-	<version>0.7.3</version>
+	<version>0.7.4.BUILD-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Client library to be used from STS and other Java tools</name>
 
