Fix for uploading app using non-ascii file names
 - setting json/application mediatype and utf-8 character set for StringHttpMessageConverter

 - adding vcap-java-client-test-apps module to build war files for integration tests

Change-Id: Ib2bff737eecfae173a5ae8675d561629ff5fe972

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<modules>
+				<module>vcap-java-client-test-apps</module>
 				<module>cloudfoundry-client-lib</module>
 				<module>cloudfoundry-maven-plugin</module>
 				<module>cloudfoundry-caldecott-lib</module>
@@ -23,6 +24,7 @@
 		<profile>
 			<id>integration-test</id>
 			<modules>
+				<module>vcap-java-client-test-apps</module>
 				<module>cloudfoundry-client-lib</module>
 				<module>cloudfoundry-maven-plugin</module>
 				<module>cloudfoundry-caldecott-lib</module>
