--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -105,6 +105,13 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.1</version>
 		</dependency>
+        <dependency>
+            <groupId>org.cloudfoundry.test</groupId>
+            <artifactId>non-ascii-file-name</artifactId>
+            <version>0.1.0.BUILD-SNAPSHOT</version>
+            <type>war</type>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -150,7 +157,40 @@
 					</excludes>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-test-app</id>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <phase>generate-test-resources</phase>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.cloudfoundry.test</groupId>
+                                    <artifactId>non-ascii-file-name</artifactId>
+                                    <version>0.1.0.BUILD-SNAPSHOT</version>
+                                    <type>war</type>
+                                    <outputDirectory>${project.build.directory}/generated-test-resources</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                            <stripVersion>true</stripVersion>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+            <testResource>
+                <directory>${project.build.directory}/generated-test-resources</directory>
+            </testResource>
+        </testResources>
 	</build>
 
 	<distributionManagement>
