--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -19,6 +19,7 @@
 
 	<properties>
 		<spring.framework.version>3.0.7.RELEASE</spring.framework.version>
+        <spring.security.oauth.version>1.0.0.M6d</spring.security.oauth.version>
 	</properties>
 
 	<profiles>
@@ -34,7 +35,7 @@
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
 							<excludes>
-								<exclude>**/CloudFoundryClientTest.java</exclude>
+								<exclude>**/CloudFoundryClientTest*.java</exclude>
 								<exclude>**/Abstract*.java</exclude>
 							</excludes>
 						</configuration>
@@ -59,6 +60,12 @@
 			<artifactId>spring-web</artifactId>
 			<version>${spring.framework.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>${spring.security.oauth.version}</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-core-asl</artifactId>
