--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -36,6 +36,7 @@
 						<configuration>
 							<excludes>
 								<exclude>**/CloudFoundryClientTest.java</exclude>
+								<exclude>**/CloudFoundryClientV2Test.java</exclude>
 								<exclude>**/Abstract*.java</exclude>
 							</excludes>
 						</configuration>
