--- a/cloudfoundry-client-lib/src/test/resources/log4j.properties
+++ b/cloudfoundry-client-lib/src/test/resources/log4j.properties
@@ -2,12 +2,6 @@ log4j.rootCategory=INFO, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
+log4j.appender.stdout.layout.ConversionPattern=%d %p [%C %M] - <%m>%n
 
-log4j.category.org.apache.activemq=ERROR
-log4j.category.org.springframework.batch=DEBUG
 log4j.category.org.springframework.web.client.RestTemplate=ERROR
-
-log4j.category.org.hibernate.SQL=DEBUG
-# for debugging datasource initialization
-# log4j.category.test.jdbc=DEBUG
