--- a/cloudfoundry-maven-plugin/pom.xml
+++ b/cloudfoundry-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cf-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>1.0.0.BUILD-SNAPSHOT</version>
+	<version>1.0.0.M2</version>
 	<name>Cloud Foundry Maven Plugin</name>
 
 	<description><![CDATA[The Cloud Foundry Maven Plugin makes it easy to deploy
@@ -136,7 +136,7 @@ Maven-based applications to Cloud Foundry instances.
 		<dependency>
 			<groupId>org.cloudfoundry</groupId>
 			<artifactId>cloudfoundry-client-lib</artifactId>
-			<version>0.7.4</version>
+			<version>0.7.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.wagon</groupId>
