Adding detection for empty file download requests
- returning empty string when file is zero bytes

- adding test resource with an empty file

- simplifying testing since we are downloading files that are part of app and not logs

Change-Id: I16d10121fcc96c0682a8931231d5ea90029cf5b4

--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -204,6 +204,13 @@
 									<type>war</type>
 									<outputDirectory>${project.build.directory}/generated-test-resources</outputDirectory>
 								</artifactItem>
+								<artifactItem>
+									<groupId>org.cloudfoundry.test</groupId>
+									<artifactId>simple-spring-app</artifactId>
+									<version>0.1.0.BUILD-SNAPSHOT</version>
+									<type>war</type>
+									<outputDirectory>${project.build.directory}/generated-test-resources</outputDirectory>
+								</artifactItem>
 							</artifactItems>
 							<stripVersion>true</stripVersion>
 						</configuration>
