Creating Service(s) using Maven POM - New goal create-services. Also creates services during push goal.
Change-Id: I88c12cd431fed05ba7b0bab8072d08fd0198417f

--- a/cloudfoundry-maven-plugin/pom.xml
+++ b/cloudfoundry-maven-plugin/pom.xml
@@ -35,6 +35,11 @@ Maven-based applications to Cloud Foundry instances.
 			<name>Gunnar Hillert</name>
 			<email>ghillert at vmware.com</email>
 		</developer>
+		<developer>
+			<id>amoghadam</id>
+			<name>Ali Moghadam</name>
+			<email>amoghadam at rbcon.com</email>
+		</developer>
 	</developers>
 
 	<scm>
