Adding facility for logging REST calls
- adding method to register/unregister REST log listeners

- adding method to get last 100 REST log entries and optionally clear log

Change-Id: I849b0f7b007cd4e67afa880541bedf2ee75003c9

--- a/cloudfoundry-client-lib/src/test/resources/log4j.properties
+++ b/cloudfoundry-client-lib/src/test/resources/log4j.properties
@@ -7,3 +7,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d %p [%C %M] - <%m>%n
 log4j.category.org.springframework.web.client.RestTemplate=ERROR
 log4j.logger.httpclient.wire=ERROR
 log4j.logger.httpclient.wire.content=ERROR
+
+log4j.logger.CF_REST=TRACE
