CF-166 create a wait feature for the push mojo, so the integration test run after the instances being ready
Change-Id: Iac5e8ce564184da49dc215b332e89f7fd5bedcf7

--- a/cloudfoundry-maven-plugin/pom.xml
+++ b/cloudfoundry-maven-plugin/pom.xml
@@ -169,6 +169,11 @@ Maven-based applications to Cloud Foundry instances.
 			<version>2.2.1</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.collections</groupId>
+			<artifactId>google-collections</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
