Adding feature to get crash info for v2
- Adding bad-spring-app  that will generate crash for testing

- Adding checks to tests that crash info is not empty

Change-Id: I941ce6600925500a48826954c4e4fb2a0557f2b4

--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -140,6 +140,13 @@
 			<type>war</type>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.cloudfoundry.test</groupId>
+			<artifactId>bad-spring-app</artifactId>
+			<version>0.1.0.BUILD-SNAPSHOT</version>
+			<type>war</type>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -207,6 +214,13 @@
 								<artifactItem>
 									<groupId>org.cloudfoundry.test</groupId>
 									<artifactId>simple-spring-app</artifactId>
+									<version>0.1.0.BUILD-SNAPSHOT</version>
+									<type>war</type>
+									<outputDirectory>${project.build.directory}/generated-test-resources</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.cloudfoundry.test</groupId>
+									<artifactId>bad-spring-app</artifactId>
 									<version>0.1.0.BUILD-SNAPSHOT</version>
 									<type>war</type>
 									<outputDirectory>${project.build.directory}/generated-test-resources</outputDirectory>
