Modified project settings

--- a/project.config
+++ b/project.config
@@ -4,3 +4,5 @@
 	label-Code-Review = -2..+2 group vcap-java-client_committers
 [access "refs/tags/*"]
 	pushTag = group vcap-java-client_committers
+[project]
+	state = hidden
