Make client deal with expired token transparently.
- Use OwnerPassword resource instead of implicit to match how it is done is cf
- Check if the token is about to expire and use refresh token if so.
- Remove unneeded unit tests

--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -19,7 +19,7 @@
 
 	<properties>
 		<spring.framework.version>3.0.7.RELEASE</spring.framework.version>
-		<spring.security.oauth.version>1.0.0.RC1</spring.security.oauth.version>
+		<spring.security.oauth.version>1.0.0.RELEASE</spring.security.oauth.version>
 	</properties>
 
 	<profiles>
